// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`horizontal > should render 0 children 1`] = `"<div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 0px; height: 100%;"></div>"`;

exports[`horizontal > should render 1 children 1`] = `
"<div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 40px; height: 100%;">
  <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: hidden; display: inline-flex;">
    <div>0</div>
  </div>
</div>"
`;

exports[`horizontal > should render 5 children 1`] = `
"<div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 200px; height: 100%;">
  <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: hidden; display: inline-flex;">
    <div>0</div>
  </div>
  <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 40px; visibility: hidden; display: inline-flex;">
    <div>1</div>
  </div>
  <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 80px; visibility: hidden; display: inline-flex;">
    <div>2</div>
  </div>
  <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 120px; visibility: hidden; display: inline-flex;">
    <div>3</div>
  </div>
  <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 160px; visibility: hidden; display: inline-flex;">
    <div>4</div>
  </div>
</div>"
`;

exports[`horizontal > should render 100 children 1`] = `
"<div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 4000px; height: 100%;">
  <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: hidden; display: inline-flex;">
    <div>0</div>
  </div>
  <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 40px; visibility: hidden; display: inline-flex;">
    <div>1</div>
  </div>
  <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 80px; visibility: hidden; display: inline-flex;">
    <div>2</div>
  </div>
  <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 120px; visibility: hidden; display: inline-flex;">
    <div>3</div>
  </div>
  <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 160px; visibility: hidden; display: inline-flex;">
    <div>4</div>
  </div>
</div>"
`;

exports[`horizontal > should render 10000 children 1`] = `
<body>
  <div>
    <div
      style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 400000px; height: 100%;"
    >
      
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: hidden; display: inline-flex;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 40px; visibility: hidden; display: inline-flex;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 80px; visibility: hidden; display: inline-flex;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 120px; visibility: hidden; display: inline-flex;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 160px; visibility: hidden; display: inline-flex;"
      >
        <div>
          4
        </div>
      </div>
      
    </div>
  </div>
</body>
`;

exports[`horizontal > should render component 1`] = `
"<div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 120px; height: 100%;">
  <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 0px; visibility: hidden; display: inline-flex;">
    <div>0</div>
  </div>
  <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 40px; visibility: hidden; display: inline-flex;">
    <div>1</div>
  </div>
  <div style="contain: layout style; position: absolute; height: 100%; top: 0px; left: 80px; visibility: hidden; display: inline-flex;">
    <div>2</div>
  </div>
</div>"
`;

exports[`should pass attributes to element 1`] = `
"<div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 40px; background: red;" id="id" class="class" tab-index="0" role="list" aria-label="test">
  <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;">
    <div>0</div>
  </div>
</div>"
`;

exports[`vertical > should render 0 children 1`] = `"<div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 0px;"></div>"`;

exports[`vertical > should render 1 children 1`] = `
"<div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 40px;">
  <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;">
    <div>0</div>
  </div>
</div>"
`;

exports[`vertical > should render 5 children 1`] = `
"<div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 200px;">
  <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;">
    <div>0</div>
  </div>
  <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 40px; visibility: hidden;">
    <div>1</div>
  </div>
  <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 80px; visibility: hidden;">
    <div>2</div>
  </div>
  <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 120px; visibility: hidden;">
    <div>3</div>
  </div>
  <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 160px; visibility: hidden;">
    <div>4</div>
  </div>
</div>"
`;

exports[`vertical > should render 100 children 1`] = `
"<div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 4000px;">
  <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;">
    <div>0</div>
  </div>
  <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 40px; visibility: hidden;">
    <div>1</div>
  </div>
  <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 80px; visibility: hidden;">
    <div>2</div>
  </div>
  <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 120px; visibility: hidden;">
    <div>3</div>
  </div>
  <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 160px; visibility: hidden;">
    <div>4</div>
  </div>
</div>"
`;

exports[`vertical > should render 10000 children 1`] = `
<body>
  <div>
    <div
      style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 400000px;"
    >
      
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 40px; visibility: hidden;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 80px; visibility: hidden;"
      >
        <div>
          2
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 120px; visibility: hidden;"
      >
        <div>
          3
        </div>
      </div>
      <div
        style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 160px; visibility: hidden;"
      >
        <div>
          4
        </div>
      </div>
      
    </div>
  </div>
</body>
`;

exports[`vertical > should render component 1`] = `
"<div style="contain: size paint style; overflow-anchor: none; overflow: clip; flex: 0 0 auto; position: relative; width: 100%; height: 120px;">
  <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 0px; visibility: hidden;">
    <div>0</div>
  </div>
  <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 40px; visibility: hidden;">
    <div>1</div>
  </div>
  <div style="contain: layout style; position: absolute; width: 100%; left: 0px; top: 80px; visibility: hidden;">
    <div>2</div>
  </div>
</div>"
`;
